--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
                 <div class="blog-title">
                   <div class="big-comment">
-                    <h3>Marty McFly</h3>
+                    <h3>Marty-McFly</h3>
                   </div>
                   <p class="home-blog-post-meta">"Nobody calls me chicken!"</p>
                   
